# schema-json-rs

./: Cargo.toml  LICENSE  README.md  clippy.toml
schema_jsonrs/: Cargo.toml
schema_jsonrs/src/: generate.rs  lib.rs  macros.rs  schema.rs  ser.rs  transform.rs
schema_jsonrs/src/_private/: mod.rs
schema_jsonrs/src/json_schema_impls/: array.rs  bytes1.rs  core.rs  decimal.rs  ffi.rs  mod.rs  nonzero.rs  serdejson.rs
schema_jsonrs_derive/: Cargo.toml
schema_jsonrs_derive/src/: lib.rs  schema_exprs.rs
schema_jsonrs_derive/src/ast/: mod.rs
schema_jsonrs_derive/src/attr/: mod.rs  parse_meta.rs  schema_jsonrs_to_serde.rs  validation.rs
