[package]
name = "schema_jsonrs_derive"
description = "Macros for #[derive(JsonSchema)], for use with schema_jsonrs"
homepage = "https://github.com/0xJWLabs/schema-json-rs"
repository = "https://github.com/0xJWLabs/schema-json-rs"
version = "0.1.0"
authors = ["Graham Esau <gesau@hotmail.co.uk>", "0xJWLabs <0xjwlabs@gmail.com>"]
edition = "2024"
license = "MIT"
readme = "README.md"
keywords = ["rust", "json-schema", "serde"]
categories = ["encoding", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.96", features = ["extra-traits"] }
serde_derive_internals = "0.29.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
